# libmma8451

./: .gitignore  CMakeLists.txt  Makefile  README.md
source/: CMakeLists.txt  mma8451-test.c  mma8452-test.c  mma8452.c  mma8452.cpp  mma8452.h
